fixed header issue on mobile

--- a/browser/scss/home.scss
+++ b/browser/scss/home.scss
@@ -57,6 +57,8 @@ $darkGray: rgb(45,45,45);
 			// margin-bottom: 40px;
 		}
 
+
+
 		/*Fancy Underline*/
 		.cool-underline {
 			overflow: hidden;
@@ -294,19 +296,23 @@ $darkGray: rgb(45,45,45);
 @media (max-width: 768px){
 	#home {
 		#header {
-	.cool-underline {
-		background: none;
-		&:hover:after {
-			background-image: none;
-		}
-	}
+			.cool-underline {
+				background: none;
+				&:hover:after {
+					background-image: none;
+				}
+			}
 			min-height: 460px;
 			padding: 0px;
 
 			.left-col {
 				font-size: 42px;
 				margin: 20px 20px 30px 20px;
-
+				a {
+					font-size: 42px;
+					margin-left: 0px;
+					margin-right: 0px;
+				}
 				// animation: none;
 			}
 			#static-bars {
